manifests/media-stack/qbittorrent/qbittorrent-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-service
  namespace: media
spec:
  # WebUI only - torrent ports (6881) are in qbittorrent-torrent-service.yaml
  type: NodePort
  selector:
    app: qbittorrent
  ports:
    - name: webui
      port: 8080
      targetPort: 8080
      nodePort: 30007
